# icefall

./: .gitignore  CLAUDE.md  Cargo.toml  DEVELOPMENT.md  LICENSE  README.md  audit.toml  build.rs  install.sh
.claude/: BOARD.md  coolify-feature-comparison.md  feature-roadmap.md  stack.md
.claude/design/: multi-server-system.md  self-update-system.md
.claude/tickets/phase-1-foundation/: IF-001-rust-project-scaffold.md  IF-002-database-schema-sqlite.md  IF-003-config-system.md  IF-004-docker-client.md  IF-005-caddy-client.md  IF-006-rest-api-skeleton.md  IF-007-daemon-lifecycle.md
.claude/tickets/phase-10-install-migration/: IF-040-install-script.md  IF-041-server-migration-export-import.md  IF-042-setup-wizard.md
.claude/tickets/phase-11-mcp-notifications/: IF-043-notification-system.md  IF-044-mcp-server.md  IF-045-settings-page.md
.claude/tickets/phase-12-landing-docs/: IF-046-landing-page.md  IF-047-documentation-site.md  IF-048-framework-guides.md  IF-049-social-assets.md  IF-156-oauth-setup-guide.md
.claude/tickets/phase-13-onboarding/: IF-050-onboarding-state-machine.md  IF-051-onboarding-ui-shell.md  IF-052-step-admin-account.md  IF-053-step-server-check.md  IF-054-step-base-domain.md  IF-055-step-git-provider.md  IF-056-step-first-app.md  IF-057-step-first-deploy.md  IF-058-onboarding-completion.md
.claude/tickets/phase-14-dashboard-surface/: IF-059-start-stop-restart-controls.md  IF-060-health-check-ui.md  IF-061-resource-limits-ui.md  IF-062-auto-deploy-webhooks-ui.md  IF-063-preview-environment-ui.md  IF-064-persistent-storage-ui.md
.claude/tickets/phase-15-critical-gaps/: IF-065-deploy-docker-images.md  IF-066-container-rollback.md  IF-067-smtp-notifications.md  IF-068-slack-discord-notifications.md  IF-069-path-based-routing.md  IF-070-instance-backup-s3.md  IF-071-notification-subscriptions-ui.md  IF-072-tags.md
.claude/tickets/phase-16-self-update/: IF-097-release-pipeline-signing.md  IF-098-update-discovery-api.md  IF-099-update-download-verify.md  IF-100-update-apply-restart.md  IF-101-update-rollback.md  IF-102-update-dashboard-ui.md  IF-103-auto-update-scheduling.md  IF-104-cli-update-command.md
.claude/tickets/phase-16-v1.1-fast-follow/: IF-073-docker-compose-support.md  IF-074-projects.md  IF-075-two-factor-authentication.md  IF-076-oauth-sso.md  IF-077-container-terminal.md  IF-078-command-palette.md  IF-079-volume-management.md  IF-080-s3-object-storage-mounts.md  IF-081-expanded-database-support.md  IF-082-native-static-deploy.md
.claude/tickets/phase-17-v1.1-fast-follow/: IF-073-docker-compose-support.md  IF-074-projects.md  IF-075-two-factor-authentication.md  IF-076-oauth-sso.md  IF-077-container-terminal.md  IF-078-command-palette.md  IF-079-volume-management.md  IF-080-s3-object-storage-mounts.md  IF-081-expanded-database-support.md  IF-082-native-static-deploy.md  IF-083-user-profile-page.md  IF-084-user-preferences.md  IF-085-admin-user-management.md
.claude/tickets/phase-18-ux-polish/: IF-086-view-transitions.md  IF-087-prefetching.md  IF-088-skeleton-loading.md  IF-089-app-detail-routing-polish.md  IF-090-sidebar-active-state.md  IF-091-toast-notifications.md  IF-092-optimistic-updates.md  IF-093-responsive-polish.md  IF-094-empty-states.md  IF-095-confirmation-dialogs.md  IF-096-keyboard-shortcuts.md
.claude/tickets/phase-19-audit-fixes/: IF-105-focus-traps-modals.md  IF-106-icon-button-target-sizes.md  IF-107-hardcoded-durations-easing.md  IF-108-hardcoded-font-sizes.md  IF-109-breakpoint-standardization.md  IF-110-logviewer-virtualization.md  IF-111-batch-deploy-status-api.md  IF-112-metrics-chart-throttle.md  IF-113-sse-cache-cleanup.md  IF-114-native-checkbox-styling.md  IF-115-app-create-validation-errors.md  IF-116-deploy-table-actions-header.md
.claude/tickets/phase-2-build-engine/: IF-008-framework-detection.md  IF-009-dockerfile-builder.md  IF-010-image-builder.md
.claude/tickets/phase-20-multi-server/: IF-117-database-migration-servers-table.md  IF-118-server-crud-api-endpoints.md  IF-119-agent-websocket-endpoint.md  IF-120-cargo-workspace-icefall-common.md  IF-121-agent-binary-skeleton.md  IF-122-agent-enrollment-flow.md  IF-123-install-script-control-plane.md  IF-124-release-workflow-agent-binary.md  IF-125-agent-docker-operations-handler.md  IF-136-servers-list-page.md  (+21 more)
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml  security-audit.yml
agent/: Cargo.toml  build.rs
agent/src/: config.rs  connection.rs  context.rs  enroll.rs  main.rs  transfer.rs
agent/src/handlers/: build.rs  caddy.rs  docker.rs  health.rs  logs.rs  metrics.rs  mod.rs  system.rs  terminal.rs
agent/src/handlers/docker/: containers.rs  images.rs  mod.rs  networks.rs  volumes.rs
assets/brand/: README.md
common/: Cargo.toml
common/src/: lib.rs  protocol.rs  transfer.rs  types.rs
dashboard/: .gitignore  astro.config.mjs  package.json  tsconfig.json
dashboard/scripts/: csp-hashes.mjs
keys/: README.md  icefall-release.pem  icefall-release.pub
scripts/: seed.sh  sign-release.py
src/: lib.rs  main.rs
src/agent/: mod.rs  protocol.rs  registry.rs
src/api/: error.rs  middleware.rs  mod.rs  rate_limit.rs  team_auth.rs  utils.rs
src/caddy/: mod.rs  queue.rs  routes.rs  types.rs
src/cli/: client.rs  daemon.rs  init.rs  mod.rs  stubs.rs
src/config/: defaults.rs  mod.rs
src/daemon/: health.rs  mod.rs  signals.rs  systemd.rs
src/db/: encryption.rs  mod.rs  models.rs  sqlite.rs
src/deploy/: compose.rs  drift.rs  envelope.rs  health.rs  manager.rs  mod.rs  native.rs  preview.rs  remote.rs  s3_mount.rs
src/docker/: containers.rs  images.rs  logs.rs  mod.rs  networks.rs  quirks.rs  runtime_compat_tests.rs  stats.rs  volumes.rs
src/events/: mod.rs
src/github/: auth.rs  client.rs
src/monitoring/: backup_scheduler.rs  health_runner.rs  instance_backup.rs  instance_health_runner.rs  log_store.rs  metrics_collector.rs  mod.rs  ssl_checker.rs
src/update/: apply.rs  discovery.rs  download.rs  keys.rs  manifest.rs  mod.rs  rollback.rs  scheduler.rs  verify.rs
website/: astro.config.mjs  package.json
(+1012 files in other folders)
