[package]
name = "icefall"
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
description = "A fast, simple, self-hosted deployment platform"
license = "MIT"

[[bin]]
name = "icefall"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }

# HTTP framework
axum = { version = "0.8", features = ["macros"] }
axum-extra = { version = "0.10", features = ["typed-header"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "request-id", "util", "fs"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "migrate", "chrono", "uuid"] }

# Docker
bollard = "0.18"

# HTTP client (for Caddy admin API)
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Encryption
aes-gcm = "0.10"
rand = "0.8"
base64 = "0.22"
argon2 = "0.5"

# Webhook signature validation
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"

# Error handling
thiserror = "2"

# Logging / tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# OpenAPI
utoipa = { version = "5", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "9", features = ["axum"] }

# Build context (tar archives for Docker image builds)
tar = "0.4"
flate2 = "1"
bytes = "1"

# System info
sysinfo = "0.35"

# Utilities
uuid = { version = "1", features = ["v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
nix = { version = "0.29", features = ["signal", "process"] }
dirs = "6"
futures-util = "0.3"
tempfile = "3"

[dev-dependencies]
tempfile = "3"
