[workspace]
members = [".", "common", "agent"]
resolver = "2"

[profile.release]
lto = true
codegen-units = 1
strip = true

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }

# HTTP framework
axum = { version = "0.8", features = ["macros", "ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "request-id", "util", "fs"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
indexmap = "2"
toml = "1"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "migrate", "chrono", "uuid"] }

# Docker
bollard = "0.21"

# HTTP client
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }

# Email
lettre = { version = "0.11.22", default-features = false, features = ["tokio1-rustls-tls", "smtp-transport", "builder"] }

# Encryption
aes-gcm = "0.10"
rand = "0.9"
base64 = "0.22"
argon2 = "0.5"
bcrypt = "0.16"

# TOTP / 2FA
totp-rs = { version = "5", features = ["gen_secret", "otpauth"] }
qrcode = { version = "0.14", features = ["svg"] }
data-encoding = "2"

# Webhook signature validation
hmac = "0.13"
sha2 = "0.11"
hex = "0.4"

# JWT (GitHub App authentication)
jsonwebtoken = "9"

# Self-update & release verification
ed25519-dalek = { version = "2", features = ["pkcs8", "pem"] }
x25519-dalek = { version = "2", features = ["static_secrets"] }
semver = { version = "1", features = ["serde"] }

# Systemd integration
listenfd = "1"
sd-notify = "0.4"

# Error handling
thiserror = "2"

# Logging / tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# OpenAPI
utoipa = { version = "5", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "9", features = ["axum"] }

# Build context (tar archives for Docker image builds)
tar = "0.4"
flate2 = "1"
bytes = "1"

# System info
sysinfo = "0.39"

# Utilities
uuid = { version = "1", features = ["v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
nix = { version = "0.31", features = ["signal", "process"] }
dirs = "6"
futures-util = "0.3"
tempfile = "3"

# Internal crates
icefall-common = { path = "common" }

[package]
name = "icefall"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
description = "A fast, simple, self-hosted deployment platform"
license = "MIT"

[[bin]]
name = "icefall"
path = "src/main.rs"

[dependencies]
icefall-common = { workspace = true }

# Async runtime
tokio = { workspace = true }
tokio-stream = { workspace = true }

# HTTP framework
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }

# CLI
clap = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
indexmap = { workspace = true }
toml = { workspace = true }

# Database
sqlx = { workspace = true }

# Docker
bollard = { workspace = true }

# HTTP client (for Caddy admin API)
reqwest = { workspace = true }

# Email
lettre = { workspace = true }

# Encryption
aes-gcm = { workspace = true }
rand = { workspace = true }
base64 = { workspace = true }
argon2 = { workspace = true }
bcrypt = { workspace = true }

# TOTP / 2FA
totp-rs = { workspace = true }
qrcode = { workspace = true }
data-encoding = { workspace = true }

# Webhook signature validation
hmac = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }

# JWT (GitHub App authentication)
jsonwebtoken = { workspace = true }

# Self-update & release verification
ed25519-dalek = { workspace = true }
x25519-dalek = { workspace = true }
semver = { workspace = true }

# Systemd integration
listenfd = { workspace = true }
sd-notify = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Logging / tracing
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# OpenAPI
utoipa = { workspace = true }
utoipa-swagger-ui = { workspace = true }

# Build context (tar archives for Docker image builds)
tar = { workspace = true }
flate2 = { workspace = true }
bytes = { workspace = true }

# System info
sysinfo = { workspace = true }

# Utilities
uuid = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }
nix = { workspace = true }
dirs = { workspace = true }
futures-util = { workspace = true }
tempfile = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
