[package]
name = "icefall-common"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
description = "Shared types and protocol definitions for Icefall"
license = "MIT"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
